# LayerDNN

./: .gitignore  ALayerGroup.cpp  CMakeLists.txt  CNLayer.h  CPVLayerGroup.h  FLayerData.cpp  FNLayer.cpp  FNLayer.h  INLayer.cpp  LNLayer.cpp  LNLayer.h  LayerDNN_Types.h  LayerData.cpp  LayerData.h  LayerTrainer.h  Makefile  OLayerData.cpp  OLayerData.h  ONLayer.cpp  PNLayer.cpp  index.html  params.json  testnn.cpp
main/: mlp.cpp  testnn.cpp
src/: ALayerGroup.h  CNLayer.cpp  CPVLayerGroup.cpp  FLayerData.h  FNLayer.cpp  INLayer.h  LNLayer.cpp  LayerDNN_Types.h  LayerData.cpp  LayerGroup.cpp  LayerGroup.h  LayerRegister.cpp  LayerRegister.h  LayerTrainer.cpp  LayerTrainer.h  NLayer.cpp  NLayer.h  ONLayer.cpp  ONLayer.h  PNLayer.cpp  PNLayer.h  Random.cpp  Random.h  VLayerGroup.cpp  VLayerGroup.h
